; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/scripts/extr_unifdef.c_flushline.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/scripts/extr_unifdef.c_flushline.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@symlist = common dso_local global i64 0, align 8
@complement = common dso_local global i32 0, align 4
@lnnum = common dso_local global i64 0, align 8
@delcount = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [10 x i8] c"#line %d\0A\00", align 1
@linenum = common dso_local global i32 0, align 4
@tline = common dso_local global i32 0, align 4
@stdout = common dso_local global i32 0, align 4
@lnblank = common dso_local global i64 0, align 8
@exitstat = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @flushline to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @flushline(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i64, i64* @symlist, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %6

5:                                                ; preds = %1
  br label %33

6:                                                ; preds = %1
  %7 = load i32, i32* %2, align 4
  %8 = load i32, i32* @complement, align 4
  %9 = xor i32 %7, %8
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %24

11:                                               ; preds = %6
  %12 = load i64, i64* @lnnum, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %20

14:                                               ; preds = %11
  %15 = load i64, i64* @delcount, align 8
  %16 = icmp sgt i64 %15, 0
  br i1 %16, label %17, label %20

17:                                               ; preds = %14
  %18 = load i32, i32* @linenum, align 4
  %19 = call i32 @printf(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32 %18)
  br label %20

20:                                               ; preds = %17, %14, %11
  %21 = load i32, i32* @tline, align 4
  %22 = load i32, i32* @stdout, align 4
  %23 = call i32 @fputs(i32 %21, i32 %22)
  store i64 0, i64* @delcount, align 8
  br label %33

24:                                               ; preds = %6
  %25 = load i64, i64* @lnblank, align 8
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %30

27:                                               ; preds = %24
  %28 = load i32, i32* @stdout, align 4
  %29 = call i32 @putc(i8 signext 10, i32 %28)
  br label %30

30:                                               ; preds = %27, %24
  store i32 1, i32* @exitstat, align 4
  %31 = load i64, i64* @delcount, align 8
  %32 = add nsw i64 %31, 1
  store i64 %32, i64* @delcount, align 8
  br label %33

33:                                               ; preds = %5, %30, %20
  ret void
}

declare dso_local i32 @printf(i8*, i32) #1

declare dso_local i32 @fputs(i32, i32) #1

declare dso_local i32 @putc(i8 signext, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
